[tool.poetry]
name = "libb"
version = "0.1.0"
readme = "README.md"
description = "libb utility modules for python"
authors = ["bissli"]
license = "0BSD"

[tool.poetry.dependencies]
python = "~3.11"

numpy = "*"
backoff = "*"
more-itertools = "*"
wrapt = "*"
matplotlib = { version = "^3.8.3", optional = true }
paramiko = { version = "^3.4.0", optional = true }
# == win
colorama = { version = "*", markers = "sys_platform == 'win32'" }
ctypes-window-info = { version = "0.15", markers = "sys_platform == 'win32'" }
taskkill = { version = "0.10", markers = "sys_platform == 'win32'" }
# == date
pandas-market-calendars = "*"
pendulum = "^3.0.0"
# == text
regex = "*"
chardet = { version = "^5.2.0", optional = true }
rapidfuzz = { version = "^3.6.1", optional = true }
ftfy = { version = "^6.1.3", optional = true }
# == db
pandas-downcast = "^1.2.4"
pyarrow = "^15.0.0" # can be removed on pandas 3 upgrade
sqlalchemy = { version = "^2.0.27", extras = ["postgresql-psycopg2binary", "postgresql-psycopgbinary", "mssql-pymssql"], optional = true }
# == mail
mailchimp-transactional = { version = "^1.0.56", optional = true }
# == logging
tls-syslog = "0.2.0"
# == web
Flask = { version = "^3.0.2", optional = true }
"web.py" = { version = "^0.62", optional = true }
# == twisted
Twisted = { version = "^23.8.0", optional = true }
service-identity = { version = "*", optional = true }
# == test
asserts = { version = "^0.12.0", optional = true }
docker = { version = "^7.0.0", optional = true }
pdbpp = { git = "https://github.com/pdbpp/pdbpp.git", rev = "master", optional = true }
pytest = { version = "^8.0.0", optional = true }
pytest-mock = { version = "^3.12.0", optional = true }
pytest-runner = { version = "^6.0.1", optional = true }
unittest2 = { version = "^1.1.0", optional = true }
WebTest = { version = "^3.0.0", extras = ["web"], optional = true }
# == deploy
bump2version = { version = "^1.0.1", optional = true }

[tool.poetry.extras]
ftp = ["paramiko"]
mail = ["mailchimp-transactional"]
db = ["sqlalchemy"]
math = ["matplotlib"]
text = [
  "ftfy",
  "rapidfuzz",
  "chardet",
]
web = [
  "Twisted",
  "service-identity",
  "web.py",
  "Flask",
]
twd = [
  "Twisted",
  "service-identity",
]
test = [
  "asserts",
  "docker",
  "pdbpp",
  "pytest",
  "pytest-mock",
  "pytest-runner",
  "unittest2",
  "WebTest",
]
deploy = ["bump2version"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
