[tool.poetry]
name = "libb-util"
version = "0.1.0"
readme = "README.md"
description = "libb utility modules for python"
authors = ["bissli"]
license = "0BSD"
packages = [{ include = "libb", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"

numpy = "*"
backoff = "*"
matplotlib = { version = "^3.8.3", optional = true }
# == text
regex = "*"
chardet = { version = "^5.2.0", optional = true }
rapidfuzz = { version = "^3.6.1", optional = true }
ftfy = { version = "^6.1.3", optional = true }
# == general
more-itertools = "*"
wrapt = "*"
psutil = "*"
requests = "*"
tqdm = "^4.66.2"
trace-dkey = "0.0.6"
platformdirs = "^4.2.0"
# == mimetypes
python-magic = { version = ">=0.4.12", optional = true }
python-magic-bin = { version = ">=0.4.12", markers = "sys_platform == 'win32' or sys_platform =='darwin'", optional = true }
# == web
Flask = { version = "^3.0.2", optional = true }
"web.py" = { version = "^0.62", optional = true }
# == twisted
Twisted = { version = "^23.8.0", optional = true }
service-identity = { version = "*", optional = true }
# == test
asserts = { version = "^0.12.0", optional = true }
docker = { version = "^7.0.0", optional = true }
pdbpp = { git = "https://github.com/pdbpp/pdbpp.git", rev = "master", optional = true }
pytest = { version = "^8.0.0", optional = true }
pytest-mock = { version = "^3.12.0", optional = true }
pytest-runner = { version = "^6.0.1", optional = true }
unittest2 = { version = "^1.1.0", optional = true }
WebTest = { version = "^3.0.0", extras = ["web"], optional = true }
# == deploy
bump2version = { version = "^1.0.1", optional = true }

[tool.poetry.extras]
math = ["matplotlib"]
text = [
  "ftfy",
  "rapidfuzz",
  "chardet",
]
web = [
  "Twisted",
  "service-identity",
  "web.py",
  "Flask",
]
twd = [
  "Twisted",
  "service-identity",
]
test = [
  "asserts",
  "docker",
  "pdbpp",
  "pytest",
  "pytest-mock",
  "pytest-runner",
  "unittest2",
  "WebTest",
]
deploy = ["bump2version"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
